# Pallet_Detection

./: .gitattributes  README.md
src/my_package/: CMakeLists.txt  package.xml  setup.py
src/my_package/launch/: all_nodes.launch.py
src/my_package/my_package/: all_nodes.launch.py  dummy_image_publisher_node.py  initial_data_processing_node.py  segment_node.py  sement_node.py  yolo_inference_node.py
